# OGXRepacker

./: README.md  build.gradle  settings.gradle
.github/workflows/: release.yml
jxdvdfs/: build.gradle  settings.gradle
jxdvdfs/src/main/java/ovh/astarivi/jxdvdfs/: XDVDFS.java
jxdvdfs/src/main/java/ovh/astarivi/jxdvdfs/base/: NativeLoader.java  XDVDFSException.java  XDVDFSFile.java  XDVDFSListener.java  XDVDFSStat.java  XDVDFSStatus.java
jxdvdfs/src/test/java/ovh/astarivi/jxdvdfs/: XDVDFSTest.java
ogx/: .gitignore  NOTICE  OGXRepackerInstaller.nsi  build.gradle  settings.gradle
ogx/gradle/wrapper/: gradle-wrapper.properties
ogx/src/main/java/ovh/astarivi/xboxlib/: Main.java
ogx/src/main/java/ovh/astarivi/xboxlib/core/: Pack.java  Threading.java
ogx/src/main/java/ovh/astarivi/xboxlib/gui/: GuiReference.java  MainForm.form  MainForm.java  ProgressForm.form  ProgressForm.java
ogx/src/main/java/ovh/astarivi/xboxlib/xdvdfs/: XDVDFS.java
ogx/src/main/resources/: archive.json  tinylog.properties
src/main/java/ovh/astarivi/xboxlib/: Main.java
src/main/java/ovh/astarivi/xboxlib/xdvdfs/: XDVDFS.java  XDVDFSImage.java
src/main/java/ovh/astarivi/xboxlib/xdvdfs/base/: UnpackImageListener.java
src/main/java/ovh/astarivi/xboxlib/xdvdfs/exceptions/: XDVDFSException.java
src/main/java/ovh/astarivi/xboxlib/xdvdfs/helpers/: UnpackImage.java
src/main/java/ovh/astarivi/xboxlib/xdvdfs/layout/: DirectoryEntry.java  Disk.java  Layout.java
xdvdfs-jlib/: .gitignore  Cargo.toml  Makefile
xdvdfs-jlib/src/: img.rs  java.rs  lib.rs  pack.rs  read.rs
xdvdfs-jlib/src/image/: img.rs  mod.rs  read.rs  split.rs  wrapper.rs  write.rs
(+23 files in other folders)
