[package]
name = "xdvdfs-jlib"
description = "Java JNI compatible XDVDFS bindings"
version = "0.2.0"
edition = "2021"

[dependencies]
xdvdfs = { version = "0.8.3", features = ["sync", "read", "std", "write"], default-features = false }
jni = "0.21.1"
anyhow = "1.0.81"
ciso = "0.2.1"
splitfile = "0.2.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"